--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -37,7 +37,7 @@ body {
     top: 0px;
     width: 100%;
     height: 428px;
-    background-color: #339af0;
+    background-color: #5672e3;
 }
 
 .background-body {
